@@ -66,6 +66,23 @@ those who either can't or don't feel like installing it.</p>
 (DOT) net), and is one of several build scripts for this purpose.</p>
 
 <p><b>?</b> v0.84<br/>
+New features:
+<ul>
+<li><p>You can quickly update and/or build a specific subdirectory within a
+module at the command line.  This corresponds to the <a
+href="#conf-checkout-only">checkout-only</a> configuration option.</p>
+<p>For example, to checkout and build the <b>khtml</b> directory of
+<b>kdelibs</b>, you would type <code>kdecvs-build kdelibs/khtml</code>.  You
+must still have the module configured within your .kdecvs-buildrc.</p>
+<p>Also, this changes the way the <a
+href="conf-checkout-only">checkout-only</a> option performs the build.  Now
+instead of downloading the different pieces and just building the module,
+kdecvs-build will download the pieces and then build the pieces in their
+subdirectory.  I believe this should be equivalent, but if not, just let me
+know.</p>
+</li>
+</ul>
+
 Bugfixes:
 <ul>
 <li>If a package didn't update, note that fact in the summary output at the end.</li>
