@@ -1,5 +1,6 @@
 Version history: 0.84
  * Show failed updates in summary output.
+ * You can now update or build only part of a module directly from the command line.
 
 Version history: 0.83
  * Added option, --ignore-modules.
